Bug 496046 Message headers should be processed in first-in first-out order r+sr=Standard8